# challenger-group-sbf

./: .editorconfig  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  config.py  docker-compose.yaml  main.py  pyproject.toml  requirements.txt  settings.toml
src/domain/: prices.py  product.py
src/repository/: products.py  quotes.py
src/routers/: v1.py
src/routers/resources/: products.py
src/schemas/: product.py
src/services/: products.py
tests/: conftest.py  test_repository_quotes.py
tests/repositorys/: test_repository_products.py  test_repository_quotes.py
tests/schemas/: contract_product.py
tests/tests_e2e/: test_product.py
